[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DAS_processor"
version = "0.1.1"
description = "Tools to parse and convert OptoDAS data"
dependencies = [
    "numpy",
    "pandas",
    "julian",
    "rich",
    "sympy",
    "h5py",
    "obspy",
    "matplotlib",
    "scipy",
    "mpl_toolkits",
    ]

[tool.setuptools.packages.find]
where = ["."]


